Modify Dream deleted function

--- a/src/app/dreams/dreams.component.html
+++ b/src/app/dreams/dreams.component.html
@@ -50,7 +50,7 @@
         <td style="direction: ltr;"><a href="https://wa.me/{{ item.interpreterPhone }}" target="_blank">{{ item.interpreterPhone }}</a></td>
         <td>{{ item.dreamPrice}}</td>
         <td>
-          <button class="btn text-danger" (click)="deleteSingleDream(item.DreamExplanatioId)"><mat-icon>delete</mat-icon></button>
+          <button class="btn text-danger" (click)="deleteSingleDream(item.DreamId)"><mat-icon>delete</mat-icon></button>
         </td>
 
         <!--<td>{{item.interpretationTime| date}}</td>
