Add New Page (All Dreams)

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -10,6 +10,9 @@
   <a mat-list-item routerLink="/dreams" routerLinkActive="list-item-active">
     <mat-icon>description</mat-icon>الأحلام
   </a>
+  <a mat-list-item routerLink="/allDreams" routerLinkActive="list-item-active">
+    <mat-icon>description</mat-icon>كل الاحلام
+  </a>
   <a mat-list-item routerLink="/purchases" routerLinkActive="list-item-active">
     <mat-icon>shopping_cart</mat-icon>المشتريات
   </a>
